--- a/public/assets/_colors.scss
+++ b/public/assets/_colors.scss
@@ -50,4 +50,4 @@ $dark-clover-teal: rgba(15, 114, 111, 1);
 $dark-clover-purple: rgba(52, 67, 140, 1);
 
 // Other
-$clover-green-web: #65AC42;
+$clover-green-web: #3e69dc;
